test_cases/pass/p32.lxr
SCRIPT AREA
START SCRIPT
DECLARE FLOAT f
DECLARE INT i
f=1.5
i=3
f=f*i
PRINT: f
END SCRIPT
