test_cases/fail/f40.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
DECLARE BOOL b
x=1
b=NOT x
END SCRIPT
